# pdfz

./: .env.sample  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  package.json  tsconfig.json
api/public/: index.html
api/src/: server.ts
api/src/helpers/: response.ts  uploadhelper.ts
api/src/lib/: rabbitmq.ts  redis.ts
api/src/lib/redis/: BaseRedisService.ts  FileProcessingService.ts  ModelDownloadService.ts  index.ts
api/src/types/: queue.ts  request.ts  response.ts
extractor/: Cargo.toml  Dockerfile  build.rs
extractor/proto/: extractor.proto
extractor/src/: main.rs  worker.rs
extractor/src/controllers/: mod.rs  queue_handler.rs
extractor/src/engine/: mod.rs  ollama.rs  tesseract.rs
extractor/src/helper/: file_helper.rs
extractor/src/libs/: extractor.rs  mod.rs  redis.rs
extractor/src/types/: engine_handler.rs  mod.rs
proto/: extractor.proto
