[package]
name = "pdfz"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.33"
image = "0.25.2"
lopdf = "0.34.0"
pdf-extract = "0.8.0"
pdfium-render = "0.8.25"
rusty-tesseract = "1.1.10"
prost = "0.13.4"
tokio = {version = "1.43.0", features = ["full"]}
tonic = "0.12.3"
redis = { version = "0.28.1", features = ["tokio-comp"] }
lapin = "2.5.0"
serde = "1.0.217"
serde_json = "1.0.135"
futures-lite = "2.6.0"
uuid = "1.12.0"
amiquip = "0.4.2"
tracing = "0.1.41"
anyhow = "1.0.95"

[build-dependencies]
tonic-build = "0.12.3"
